--- a/style.css
+++ b/style.css
@@ -2,6 +2,30 @@ body, HTML{
 height: 100%;
 }
 
+.main_body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center; 
+}
+
+.header{
+    height: 50px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+.set{
+    border: none;
+    background-color:aquamarine;
+    height: 40px;
+    width: 100px;
+    font-size: 20px;
+    font-weight: bold;
+}
+
 .main_container{
     height: 100%;
     display: flex;
@@ -16,6 +40,8 @@ height: 100%;
     width: 900px;
     justify-content:center;
     align-items: center;
+    border-style: solid;
+    border-width: 1px;
 }
 
 .row{
@@ -28,9 +54,9 @@ height: 100%;
 
 .box{
     width: 100%;
-    background-color: green;
+    background-color: white;
 }
 
 .color_change{
-    background-color: pink;
+    background-color: rgb(0,0,0);
 }
